# c3sdb

./: .gitignore  C3S.db  LICENSE.txt  README.md  dev_notes.md  requirements.txt  setup.cfg
C3SData/: __init__.py  data.py  db_interface.py
analysis/: .enet_fulldset_10trials.kmme.json.swp  .svr_fulldset_10trials.svr.json.swp  C3S.db  C3SDB_KMeans_and_Multiple_Estimators.ipynb  C3SDB_KMeans_clustering_figures.ipynb  C3SDB_LipidCCS_predictor_test.ipynb  C3SDB_database_analysis_20190719.ipynb  C3SDB_feature_engineering.ipynb  C3SDB_model_performance_plots.ipynb  C3SData  KMC_SVR_final_model.ipynb  KMC_SVR_final_model_cluster-distance.ipynb  LEncoder_20200204.pickle  LEncoder_20210810.pickle  OHEncoder_20200214.pickle  OHEncoder_20210414.pickle  README.md  SScaler_20200204.pickle  SScaler_20210408.pickle  SScaler_20210413.pickle  SScaler_20210414.pickle  SScaler_20210423.pickle  SScaler_20210810.pickle  clustering_analysis.py  fingerprint_analysis.py  gt5_percent_error.csv  kmcm_svr_final_20200204.pickle  kmcm_svr_final_20210408.pickle  kmcm_svr_final_20210810.pickle  kmcm_svr_final_results_20210408.json  kmcm_svr_final_results_20210413.json  kmcm_svr_final_results_20210414.json  kmcm_svr_final_results_20210423.json  kmcm_svr_final_results_20210810.json  tc_fdr.py  train_final_model.py
build_data/: README.md  dodd0220.json  hine0119.json  hine0217.json  hine0817.json  hine1217.json  moll0218.json  nich1118.json  pagl0314.json  pola0620.json  righ0218.json  stow0817.json  teja0918.json  zhen0917.json  zhou1016.json
c3sdb/: __init__.py
db_setup/: C3S.db  C3SDB_schema.sql  (+21 more)
(+100 files in other folders)
