[metadata]
name = c3sdb
version = 2.0.23
author = Dylan H. Ross
url = https://github.com/dylanhross/c3sdb
description = C3SDB (Combined Collision Cross Section DataBase)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    rdkit
    requests
    scikit-learn==1.4.0
    numpy
    matplotlib
include_package_data = True
zip_safe = True

[options.package_data]
c3sdb = pretrained/*.pkl
